# QRScanner

./: CMakeLists.txt  README.md  main.cpp
